[apiV2] added configuration for api v2

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = ${PORT:8082}
 
 # MongoDB data
 spring.data.mongodb.database=${DB_NAME:snoicd-codex}
-spring.data.mongodb.host=${DB_HOST:localhost}
+spring.data.mongodb.host=${DB_HOST:mongo}
 spring.data.mongodb.port=${DB_PORT:27017}
 #spring.data.mongodb.username=${DB_USER:}
 #spring.data.mongodb.password=${DB_PASS:}
