[test] fixed coverage and addes smoke tests

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -138,7 +138,9 @@
 				<version>0.7.7.201606060606</version>
 				<configuration>
 					<excludes>
-						<exclude>src/main/scripts/**</exclude>
+						<exclude>**/repositories/**</exclude>
+						<exclude>**/tests/**</exclude>
+						<exclude>**/StartUp.*</exclude>
 					</excludes>
 				</configuration>
 				<executions>
