[apiV2] search improved, added google search

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.data.mongodb.host=${DB_HOST:mongo}
 spring.data.mongodb.port=${DB_PORT:27017}
 #spring.data.mongodb.username=${DB_USER:}
 #spring.data.mongodb.password=${DB_PASS:}
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
