--- a/api/pom.xml
+++ b/api/pom.xml
@@ -31,6 +31,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.github.thewilly</groupId>
+			<artifactId>big-table</artifactId>
+			<version>0.0.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
