--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -40,6 +41,44 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
+		
+		<!-- MICRONAUT DEPENDENCIES -->
+
+		<dependency>
+			<groupId>io.micronaut</groupId>
+			<artifactId>runtime</artifactId>
+			<version>1.0.0.RC2</version>
+		</dependency>
+		
+		<dependency>
+          <groupId>io.micronaut</groupId>
+          <artifactId>micronaut-http-client</artifactId>
+          <scope>compile</scope>
+          <version>1.1.0.RC2</version>
+        </dependency>
+        
+        <dependency>
+          <groupId>io.micronaut</groupId>
+          <artifactId>micronaut-http-server-netty</artifactId>
+          <scope>compile</scope>
+          <version>1.1.0.RC2</version>
+        </dependency>  
+              
+        <dependency>
+          <groupId>io.micronaut</groupId>
+          <artifactId>micronaut-inject</artifactId>
+          <scope>compile</scope>
+          <version>1.1.0.RC2</version>
+        </dependency>
+        
+        <dependency>
+          <groupId>io.micronaut</groupId>
+          <artifactId>micronaut-runtime</artifactId>
+          <scope>compile</scope>
+          <version>1.1.0.RC2</version>
+        </dependency>
+        
+        <!-- MICRONAUT DEPENDENCIES -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
