--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 jdk:
 - oraclejdk8
-script: "cd search-api; mvn test;"
+script: "cd snoicd-search; mvn test;"
 after_success:
 - bash <(curl -s https://codecov.io/bash)
