[dockerization] fixed docker

--- a/snoicd-search/Dockerfile
+++ b/snoicd-search/Dockerfile
@@ -4,6 +4,7 @@ ARG DEPENDENCY=target/dependency
 COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY ${DEPENDENCY}/META-INF /app/META-INF
 COPY ${DEPENDENCY}/BOOT-INF/classes /app
-COPY concepts.json	concepts.json
+COPY conceptID.index	conceptID.index
+COPY descriptions.index	descriptions.index
 EXPOSE 8082
-ENTRYPOINT ["java", "-XX:-UseGCOverheadLimit","-cp","app:app/lib/*","org.weso.snoicd.StartUp"]
+ENTRYPOINT ["java", "-XX:-UseGCOverheadLimit","-cp","app:app/lib/*","org.weso.snoicd.search.StartUp"]
