--- a/snoicd-indexer/pom.xml
+++ b/snoicd-indexer/pom.xml
@@ -62,6 +62,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>me.tongfei</groupId>
+			<artifactId>progressbar</artifactId>
+			<version>0.7.3</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
