--- a/snoicd-crawler/pom.xml
+++ b/snoicd-crawler/pom.xml
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
-			<version>3.10.1</version>
+			<version>3.10.1</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 
 		<dependency>
