--- a/snoicd-search/pom.xml
+++ b/snoicd-search/pom.xml
@@ -61,6 +61,7 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
+			<version>1.18.6</version>
 		</dependency>
 
 		<dependency>
