[snoicd-indexer] changes StringNormalizator to extended function at core

--- a/snoicd-indexer/pom.xml
+++ b/snoicd-indexer/pom.xml
@@ -25,7 +25,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.weso</groupId>
+			<groupId>org.weso.snoicd</groupId>
 			<artifactId>snoicd-core</artifactId>
 			<version>1.0.0</version>
 		</dependency>
