--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
   <properties>
     <!-- Default to UTF-8 otherwise Maven complains -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>1.8</java.version>
+
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
 
   <modules>
