--- a/snoicd-crawler/pom.xml
+++ b/snoicd-crawler/pom.xml
@@ -33,6 +33,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
 		</dependency>
 
 		<dependency>
@@ -51,6 +52,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
+			<version>4.9</version>
 		</dependency>
 	</dependencies>
 
