--- a/snoicd-search/pom.xml
+++ b/snoicd-search/pom.xml
@@ -45,6 +45,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
 		</dependency>
 
 		<dependency>
@@ -94,6 +95,7 @@
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<version>2.2.0</version>
 			<scope>test</scope>
 		</dependency>
 
