--- a/snoicd-server/pom.xml
+++ b/snoicd-server/pom.xml
@@ -11,5 +11,28 @@
 
     <artifactId>server</artifactId>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>org.weso.snoicd</groupId>
+            <artifactId>snoicd-search</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
